src/objects/Request__c.object
<CustomObject>
    <fields>
        <fullName>Budget_Type__c</fullName>
        <label>Budget Type</label>
        <picklist>
            <picklistValues>
                <fullName>Furniture</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof Event Participation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Waiting for approval</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserViewLogic__c</fullName>
        <formula>IF(OwnerId = $User.Id || $Profile.Name = &quot;General Manager (GM)&quot; , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserViewLogic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Request</label>
    <listViews>
        <fullName>Accepted_Requests</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Budget_Type__c</columns>
        <columns>Job_Title__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UserViewLogic__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </filters>
        <label>Accepted Requests</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Rejected_Requests</fullName>
        <columns>Subject__c</columns>
        <columns>Budget_Type__c</columns>
        <columns>Job_Title__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UserViewLogic__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected Requests</label>
    </listViews>
    <listViews>
        <fullName>Waiting_Requests</fullName>
        <columns>Subject__c</columns>
        <columns>Budget_Type__c</columns>
        <columns>Job_Title__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UserViewLogic__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Waiting for approval</value>
        </filters>
        <label>Waiting Requests</label>
    </listViews>
    <nameField>
        <label>Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>